--- a/CSS/index.css
+++ b/CSS/index.css
@@ -216,3 +216,65 @@ a:hover{
 .status-label{
     font-size: 20px;
 }
+
+/* Credentials Intro text styling */
+.credentials-text{
+    margin-top: 17%;
+    width: 100%;
+    text-align: center;
+}
+
+.credentials-text h1{
+    font-size: 60px;
+    font-weight:bold;
+}
+
+.credentials-text h3{
+    font-size: 30px;
+    font-weight:bold;
+}
+
+/* Main body styling */
+#award-plaque{
+    width: 600px;
+    height: 750px;
+    margin: 10px 0px 40px 250px;
+    padding: 20px;
+    border: 30px #855E42 ridge;
+    background-color: #5a3e2a;
+}
+/* Award Plaque Styling */
+
+/* Top part of the plaque */
+.top-part{
+    background-color: #DAA520;
+}
+
+.top-part #description-text{
+    margin-top: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #047;
+    font-size: 30px;
+    text-align: center;
+    padding-bottom: 15px;
+}
+
+#award-plaque #bpa-logo{
+    width: 75%;
+    height: 55%;
+    margin-left: 70px;
+}
+
+#award-plaque #ohio-logo{
+    width: 60%;
+    height: 60%;
+    margin-left: 100px;
+}
+
+/* Bottom part styling */
+.bottom-part{
+    margin-top: 20px;
+    background-color: #DAA520;
+    text-align: center;
+    font-size: 20px;
+}
