--- a/CSS/index.css
+++ b/CSS/index.css
@@ -53,7 +53,8 @@ a:hover{
 }
 
 /* Main Content Styling */
-#personal-img{
+#personal-img,
+#personal-img2{
     width: 200px;
 }
 
@@ -277,4 +278,12 @@ a:hover{
     background-color: #DAA520;
     text-align: center;
     font-size: 20px;
+}
+
+/* Styling Resume */
+#resume button{
+    font-size: 30px;
+    margin-left: 200%;
+    width: 300px;
+    margin-bottom: 20px;
 }
