--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,5 +1,5 @@
 body{
-    background-color: black;
+    background-color: #212529;;
     font-family: 'Courier New', Courier, monospace;
     font-weight: 800;
 }
