--- a/Projects/TetrisEnhanced/Css/tetris-solo.css
+++ b/Projects/TetrisEnhanced/Css/tetris-solo.css
@@ -3,6 +3,16 @@ body{
     color: white;
 }
 
+a{
+    color: black;
+    text-decoration: none;
+}
+
+a:hover{
+    color: black;
+    text-decoration: none;
+}
+
 button{
     background-color: gray;
 }
