--- a/Projects/TetrisEnhanced/Css/tetris-menu.css
+++ b/Projects/TetrisEnhanced/Css/tetris-menu.css
@@ -154,6 +154,18 @@ header input{
     }
   }
 
+  @keyframes glow-vs-ai-btn {
+    0% {
+      text-shadow: 0 0 10px yellow, 0 0 20px yellow, 0 0 30px yellow; 
+    }
+    50% {
+      text-shadow: 0 0 20px yellow, 0 0 30px yellow, 0 0 40px yellow; 
+    }
+    100% {
+      text-shadow: 0 0 10px yellow, 0 0 20px yellow, 0 0 30px yellow; 
+    }
+  }
+
   @keyframes glow-play-in-development {
     0% {
       text-shadow: 0 0 10px rgb(255, 162, 0), 0 0 20px rgb(255, 162, 0), 0 0 30px rgb(255, 162, 0);
@@ -189,6 +201,18 @@ header input{
     }
     100% {
       box-shadow: 0 0 5px 0px #00ff00;
+    }
+  }
+
+  @keyframes glow-border-vs-ai-btn {
+    0% {
+      box-shadow: 0 0 5px 0px yellow; 
+    }
+    50% {
+      box-shadow: 0 0 10px 5px yellow;
+    }
+    100% {
+      box-shadow: 0 0 5px 0px yellow;
     }
   }
 
@@ -233,6 +257,10 @@ header input{
     animation: glow-play-btn 1.5s infinite; 
 }
 
+.glowing-text-vs-ai-btn {
+  animation: glow-vs-ai-btn 1.5s infinite; 
+}
+
 .glowing-text-in-development {
     animation: glow-play-in-development 1.5s infinite; 
 }
@@ -253,6 +281,19 @@ header input{
     background-color: black;
     border: 4px solid #00ff00; 
     animation: glow-border-play-btn 1.5s infinite;
+}
+
+.vsAIBtn{
+  color: yellow;
+  background-color: black;
+  border: 4px solid yellow !important;
+}
+
+.vsAIBtn:hover{
+  color: rgb(228, 225, 6);
+  background-color: black;
+  border: 4px solid rgb(228, 225, 6); 
+  animation: glow-border-vs-ai-btn 1.5s infinite;
 }
 
 .in-development{
