--- a/Projects/TetrisEnhanced/Css/tetris-menu.css
+++ b/Projects/TetrisEnhanced/Css/tetris-menu.css
@@ -40,21 +40,59 @@ header h3{
 }
 
 header input{
-    font-size: 25px;
-    padding: 20px;
-    margin-left: 7%;
-    margin-right: 15px;
+    font-size: 20px;
+    padding: 10px;
+    margin-left: 30%;
     margin-top: 20px;
+    display: block;
+    margin-bottom: 20px;
+    background-color: black;
+    color: 	white;
+    border-radius: 30px;
+}
+
+header input::placeholder
+{
+  color: 	white;
+  font-weight: bold;
+}
+
+span{
+  display: inline;
 }
 
 #error-div{
     margin: 0;
-    margin-left: 45px;
+    margin-left: 25%;
 }
 
 /* Styling user-input field */
-#record-field{
-    display: inline;
+
+.stats{
+  color: white;
+  font-size: 25px;
+  margin-right: 15px;
+  font-style: italic;
+  font-weight: bold;
+}
+
+#record-points{
+    margin-left: 13%;
+}
+
+#recordPoints{
+  color: red;
+
+}
+
+#recordLinesCleared
+{
+  color: rgb(0, 255, 183);
+}
+
+#recordTetrominoes
+{
+  color: rgb(255, 0, 123);
 }
 
 #creator-label
@@ -66,7 +104,7 @@ header input{
 .button-container{
     display: block;
     margin-left: 60px;
-    margin-top: 60px;
+    margin-top: 20px;
     width: 400px;
 }
 
