--- a/Projects/TetrisEnhanced/Css/tetris-menu.css
+++ b/Projects/TetrisEnhanced/Css/tetris-menu.css
@@ -216,6 +216,18 @@ span{
     }
   }  
 
+  @keyframes glow-clear-save {
+    0% {
+      text-shadow: 0 0 10px rgb(255, 255, 255), 0 0 20px rgb(255, 255, 255), 0 0 30px rgb(255, 255, 255);
+    }
+    50% {
+      text-shadow: 0 0 20px rgb(255, 255, 255), 0 0 30px rgb(255, 255, 255), 0 0 40px rgb(255, 255, 255);
+    }
+    100% {
+      text-shadow: 0 0 10px rgb(255, 255, 255), 0 0 20px rgb(255, 255, 255), 0 0 30px rgb(255, 255, 255);
+    }
+  } 
+
   @keyframes glow-play-exit-btn {
     0% {
       text-shadow: 0 0 10px rgb(255, 0, 0), 0 0 20px rgb(255, 0, 0), 0 0 30px rgb(255, 0, 0);
@@ -266,6 +278,18 @@ span{
     }
   }
 
+  @keyframes glow-border-clear-save{
+    0% {
+      box-shadow: 0 0 5px 0px rgb(255, 255, 255);
+    }
+    50% {
+      box-shadow: 0 0 10px 5px rgb(255, 255, 255);
+    }
+    100% {
+      box-shadow: 0 0 5px 0px rgb(255, 255, 255);
+    }
+  }
+
   @keyframes glow-border-exit-btn{
     0% {
       box-shadow: 0 0 5px 0px red;
@@ -301,6 +325,10 @@ span{
 
 .glowing-text-in-development {
     animation: glow-play-in-development 1.5s infinite; 
+}
+
+.glowing-text-clear-save {
+  animation: glow-clear-save 1.5s infinite; 
 }
 
 .glowing-text-exit-btn {
@@ -345,6 +373,19 @@ span{
     background-color: black;
     border: 4px solid rgb(255, 175, 37);
     animation: glow-border-in-development 1.5s infinite;
+}
+
+.clear-save{
+  color: rgb(255, 255, 255);
+  background-color: black;
+  border: 4px solid rgb(255, 255, 255) !important;
+}
+
+.clear-save:hover{
+  color: rgb(255, 255, 255);
+  background-color: black;
+  border: 4px solid rgb(255, 255, 255);
+  animation: glow-border-clear-save 1.5s infinite;
 }
 
 .btn-quit{
