--- a/Projects/FullStackClicker/Css/clicker.css
+++ b/Projects/FullStackClicker/Css/clicker.css
@@ -6,7 +6,7 @@ body
 
 .container
 {
-    width: 97%;
+    width: 100%;
     height: 850px;
     border: 5px black solid;
     position: relative;
@@ -52,8 +52,7 @@ body
     border: 5px rgb(179, 0, 255) solid;
     display: inline-block;
     position: absolute;
-    top: 0;
-    justify-content: space-between;
+    right: 0;
 }
 
 /* Store Items Styling */
@@ -74,13 +73,12 @@ body
 
 .timer-container
 {
-    width: 545px;
+    width: 245px;
     height: 20%;
     border: 5px rgb(234, 255, 0) solid;
     display: inline-block;
     position: absolute;
     top: 0;
-    right: 0;
 }
 
 .actions-menu-container
@@ -91,17 +89,27 @@ body
     display: inline-block;
     position: absolute;
     top: 21%;
+    left: 70%
 }
 
 .view-assets-container
 {
-    width: 547px;
+    width: 595px;
     height: 78%;
-    border: 5px rgb(255, 153, 0) solid;
+    border: 5px rgb(255, 136, 0) solid;
     display: inline-block;
     position: absolute;
     top: 21%;
-    left: 70%
+}
+
+.info-container
+{
+    width: 340px;
+    height: 20%;
+    border: 5px rgb(0, 0, 255) solid;
+    display: inline-block;
+    position: absolute;
+    right: 30%;
 }
 
 /* Scores styling */
