--- a/CSS/index.css
+++ b/CSS/index.css
@@ -352,3 +352,20 @@ a:hover{
     margin-left: 100px;
 }
 
+.bigger-table {
+    font-size: 1.7rem;
+    margin-left: 30px;
+    margin-top: 30px;
+}
+
+.bigger-table th{
+    color: orange;
+}
+
+.bigger-table a{
+    color: red;
+}
+
+.bigger-table a:hover{
+    color: rgb(0, 68, 255);
+}
